crates/api/tests/snapshots/wire_snapshots__tag_suggestion_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TagSuggestionDto\n{ namespace: \"character\".into(), subtag: \"samus\".into(), count: 12 }"
---
{
  "namespace": "character",
  "subtag": "samus",
  "count": 12
}
