crates/api/tests/snapshots/wire_snapshots__tagger_lookup_item.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TaggerLookupItem\n{ file: \"a\".repeat(64), tags: vec![\"character:samus\".into()] }"
---
{
  "file": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "tags": [
    "character:samus"
  ]
}
