crates/api/tests/snapshots/wire_snapshots__tags_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TagsReq { file: \"a\".repeat(64), tags: vec![\"character:samus\".into()] }"
---
{
  "file": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "tags": [
    "character:samus"
  ]
}
