crates/api/tests/snapshots/wire_snapshots__trust_floor_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TrustFloorDto { floor: None, uses_auto: false }"
---
{
  "floor": null,
  "uses_auto": false
}
