crates/api/tests/snapshots/wire_snapshots__trust_floor_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TrustFloorReq { floor: Some(2), uses_auto: Some(true) }"
---
{
  "floor": 2,
  "uses_auto": true
}
