crates/api/tests/snapshots/wire_snapshots__trust_floor_req_auto_only.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TrustFloorReq { floor: None, uses_auto: Some(true) }"
---
{
  "uses_auto": true
}
