crates/api/tests/snapshots/wire_snapshots__trust_rule_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TrustRuleDto\n{\n    service: \"ptr\".into(), author: \"aa\".repeat(32), weight: -3, note:\n    Some(\"spammer\".into())\n}"
---
{
  "service": "ptr",
  "author": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "weight": -3,
  "note": "spammer"
}
