crates/api/tests/snapshots/wire_snapshots__trust_set_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "TrustSetReq\n{ service: \"ptr\".into(), author: \"aa\".repeat(32), weight: 5, note: None }"
---
{
  "service": "ptr",
  "author": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "weight": 5,
  "note": null
}
